@@ -5977,6 +5977,16 @@ print_line (struct list_files *cfile, char *line, int line_num, int in_copy)
 	}
 }
 
+#define RET_IF_OVERFLOW(x)					\
+	do {							\
+		if (out_pos < CB_LINE_LENGTH) {			\
+			(x);					\
+		} else {					\
+			cmp_line[CB_LINE_LENGTH] = '\0';	\
+			return last_col;			\
+		}						\
+	} ONCE_COB
+		
 /*
   Copy each token in pline from the start of pline[first_idx] to the end of
   pline[last_idx] into cmp_line, separated by a space. Tokens are copied from
@@ -6015,7 +6025,7 @@ compare_prepare (char *cmp_line, char *pline[CB_READ_AHEAD],
 		/* Copy chars between the first and last non-space characters */
 		while (i <= last_nonspace) {
 			if (isspace ((unsigned char)pline[line_idx][i])) {
-				cmp_line[out_pos++] = ' ';
+				RET_IF_OVERFLOW (cmp_line[out_pos++] = ' ');
 				for (i++; (i <= last_nonspace) && isspace ((unsigned char)pline[line_idx][i]); i++);
 				if (i > last_nonspace) {
 					break;
@@ -6029,22 +6039,22 @@ compare_prepare (char *cmp_line, char *pline[CB_READ_AHEAD],
 				if (in_string) {
 					i++;
 				} else {
-					cmp_line[out_pos++] = pline[line_idx][i++];
+					RET_IF_OVERFLOW (cmp_line[out_pos++] = pline[line_idx][i++]);
 					in_string = 1;
 				}
 
 				for (; (i <= last_nonspace) && (pline[line_idx][i] != '"'); ) {
-					cmp_line[out_pos++] = pline[line_idx][i++];
+					RET_IF_OVERFLOW (cmp_line[out_pos++] = pline[line_idx][i++]);
 				}
 				if (pline[line_idx][i] == '"') {
-					cmp_line[out_pos++] = pline[line_idx][i++];
+					RET_IF_OVERFLOW (cmp_line[out_pos++] = pline[line_idx][i++]);
 					in_string = 0;
 				}
 				if (i > last_nonspace) {
 					break;
 				}
 			} else {
-				cmp_line[out_pos++] = pline[line_idx][i++];
+				RET_IF_OVERFLOW (cmp_line[out_pos++] = pline[line_idx][i++]);
 			}
 		}
 	}
@@ -6054,6 +6064,8 @@ compare_prepare (char *cmp_line, char *pline[CB_READ_AHEAD],
 #endif
 	return last_col;
 }
+
+#undef RET_IF_OVERFLOW
 
 /*
   Add adjust to each line number less than line_num (if appropriate) in cfile's
