@@ -6,7 +6,9 @@
 	* typeck.c: implement syntax rules for FILE STATUS (bug #656), with
 	  warning for PIC 99 status (FR #333).
 	* parser.y (file_control_entry): fixed bug #619: create dummy
-	 current_file for invalid SELECT.
+	  current_file for invalid SELECT.
+	* cobc.c (compare_prepare): fixed bug #569: stop copying into cmp_line
+	  when line length exceeds CB_LINE_LENGTH.
 
 2020-06-30  Edward Hart <edward.dan.hart@gmail.com>
 
